--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
-        <head>
-            <title> My Page</title>
-        </head>
-        <body></body>
-            <h1>Welcome to My Page!</h1>
-            <p>Hi</p>
-        </body>  
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>index.html</title>
+</head>
+<body>
+    <h1>Rudi:</h1>
+    <img src="rudi.jpeg" alt="Description of image" width="1600" height="700" >
+</body>
 </html>
+
