--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <title>index.html</title>
 </head>
 <body>
-    <h1>Rudi:</h1>
-    <img src="rudi.jpeg" alt="Description of image" width="1600" height="700" >
+    <h1>Playground to learn html</h1>
+
+    <h2>About myself</h2>
+    <ul>
+        <li>First name: David</li>
+        <li>Second name: Zwettler</li>
+        <li>Age: 15</li>
+        <li>School I am attending: HTL Leonding</li>
+        <li>Languages I currently know(I can write Hello_World): C#, C, HTML</li>
+        <li>Good at programming? Sadly not yet &#128577;</li>
+        <li>Net worth: Brokie</li>
+    </ul>
+
 </body>
 </html>
 
