Trying to implement cool hover over function

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index.html</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Playground to learn html</h1>
-
-    <h2>About myself</h2>
-    <ul>
-        <li>First name: David</li>
-        <li>Second name: Zwettler</li>
-        <li>Age: 15</li>
-        <li>School I am attending: HTL Leonding</li>
-        <li>Languages I currently know(I can write Hello_World): C#, C, HTML</li>
-        <li>Good at programming? Sadly not yet &#128577;</li>
-        <li>Net worth: Brokie</li>
-    </ul>
-
+    <div class="container">
+        <div class="header">Hover over me to see more information</div>
+        <div class="info-panel">  
+          <h2>My Information</h2>
+          <p>Name: David Zwettler</p>
+          <p>Email: david.zwettler@icloud.com</p>
+          <p>School I am attending: HTL Leonding</p>
+          <p>Programming languages I know(I can atleast write Hello_World): C#, C</p>
+          <p>Am I good at programming? Sadly not yet &#128577;</p>
+        </div>
+      </div>
 </body>
 </html>
 
